--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   </head>
   <body style="background-color: #EAECF1;">
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
