--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body style="background-color: #EAECF1;">
     <div id="app"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
